--- a/src/blocks/footer/_footer.scss
+++ b/src/blocks/footer/_footer.scss
@@ -120,7 +120,7 @@
 
         .footer__link {
           font-size: var(--text-sm);
-          text-transform: uppercase;
+          line-height: 1.875;
         }
       }
     }
