--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@
 @import '../blocks/statistics/statistics';
 @import '../blocks/how/how';
 @import '../blocks/hiw/hiw';
+@import '../blocks/why/why';
 @import '../blocks/step/step';
 @import '../blocks/theme/theme';
 @import '../blocks/pricing/pricing';
