--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -19,7 +19,7 @@
     user-select: none;
     -webkit-tap-highlight-color: transparent;
 
-    @include media(xl) {
+    @include media(md) {
       display: none;
     }
   }
@@ -49,8 +49,25 @@
     display: block;
     inline-size: min(167px, 30vw);
 
+    &_place_menu {
+      display: none;
+    }
+
     @include media(xl, max) {
+      display: none;
+
+      &_place_menu {
+        display: block;
+      }
+    }
+
+    @include media(md, max) {
+      display: block;
       margin-inline-end: auto;
+
+      &_place_menu {
+        display: none;
+      }
     }
   }
 
@@ -63,49 +80,82 @@
     flex: auto;
 
     display: flex;
-    gap: var(--indent-lg);
+    gap: 0 var(--indent-lg);
     align-items: center;
     justify-content: space-between;
 
-    @include media(xl, max) {
+    @include media(xs, max) {
+      inset: 0;
+      box-shadow: none;
+      border-radius: 0;
+      inline-size: 100%;
+      padding-block-start: var(--header-block-size);
+      row-gap: var(--indent-lg);
+      min-block-size: 100vh;
+      min-block-size: 100dvb;
+      justify-content: flex-start;
+    }
+
+    @include media(md, max) {
+      position: absolute;
+      inset: 100% var(--indent-main-wide) auto auto;
+      background-color: var(--bg-main-color);
+      box-shadow: 0 0 15px rgb(0 0 0 / 25%);
+      padding: var(--indent-lg);
+      border-radius: var(--border-radius-sm);
+
+      display: flex;
       grid-column: 1/-1;
       flex-direction: column;
       place-self: start;
-      padding-block: var(--indent-xs);
+
+      visibility: hidden;
+      opacity: 0;
+      pointer-events: none;
+      user-select: none;
+      transition:
+        visibility 0s 0.35s,
+        opacity 0.35s;
+    }
+
+    @include media(xl, max) {
+      display: grid;
+      grid-template-columns: auto 1fr auto;
+
+      .header__list {
+        grid-column: 1/3;
+      }
+
+      .header__social-list {
+        grid-area: 2/3/3/4;
+        place-self: center;
+      }
+
+      .header__login-button {
+        grid-area: 1/3/2/4;
+      }
     }
   }
 
   &__list {
     display: flex;
-    gap: var(--indent-lg);
+    flex-wrap: wrap;
+    gap: 0 var(--indent-lg);
 
-    @include media(xl, max) {
+    @include media(md, max) {
       flex-direction: column;
-      padding-block-end: var(--indent-lg);
-      border-block-end: 1px solid var(--text-secondary-color);
+    }
+
+    @include media(xs, max) {
+      align-items: center;
     }
   }
 
-  &__list-item {
-    @include media(xl, max) {
-      transform: scale(1.15) translateY(-30px);
-      opacity: 0;
-      pointer-events: none;
-      user-select: none;
-      transition:
-        transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
-        opacity 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-
-      @for $i from 1 through 7 {
-        &:nth-child(#{$i}) {
-          transition-delay: #{0.56 - ($i * 0.07)}s;
-        }
-      }
-    }
-  }
+  // &__list-item {}
 
   &__link {
-    padding-block: 1em;
+    display: block;
+    padding-block: var(--indent-xs);
     font-size: 1em;
     font-weight: 500;
     text-decoration: none;
@@ -123,6 +173,10 @@
       color: var(--main-color);
       pointer-events: default;
     }
+
+    @include media(xs, max) {
+      font-size: 1.5em;
+    }
   }
 
   &__social-list {
@@ -131,21 +185,7 @@
     align-items: center;
   }
 
-  &__social-list-item {
-    @include media(xl, max) {
-      transform: scale(1.15) translateY(-15px);
-      opacity: 0;
-      transition:
-        transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
-        opacity 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-
-      @for $i from 1 through 7 {
-        &:nth-child(#{$i}) {
-          transition-delay: #{0.56 - ($i * 0.07)}s;
-        }
-      }
-    }
-  }
+  // &__social-list-item {}
 
   &__social-link {
     color: var(--text-secondary-color);
@@ -175,58 +215,51 @@
   &__login-button {
     flex: none;
 
+    &_place_menu {
+      display: none;
+    }
+
+    @include media(xs, max) {
+      &_place_menu {
+        display: inline-flex;
+      }
+    }
+
+    @include media(md, max) {
+      display: inline-flex;
+
+      &_place_menu {
+        display: none;
+      }
+    }
+
     @include media(xl, max) {
-      grid-area: 1/3/2/4;
+      display: none;
+
+      &_place_menu {
+        display: inline-flex;
+      }
     }
   }
 
-  @include media(xl, max) {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto 1fr;
-    position: absolute;
-    z-index: 1;
+  @include media(md, max) {
+    position: relative;
+    z-index: 100;
+    gap: var(--indent-sm);
+    background-color: rgb(255 255 255 / 70%);
+    backdrop-filter: blur(10px);
+    position: fixed;
     inset: 0 0 auto 0;
 
-    background-color: var(--bg-main-color);
-    // background-image: linear-gradient(
-    //   to bottom,
-    //   var(--bg-main-color) 0% 4.875em,
-    //   var(--bg-secondary-color) 4.875em 100%
-    // );
-    // background-size: 0;
-
-    overflow: hidden;
-    block-size: var(--header-block-size);
-    transition:
-      all 0.3s ease-in,
-      background-color 0.5s ease-in;
-
     &_menu-opened {
-      position: fixed;
-      block-size: 100%;
-      background-size: 100%;
-
-      transition-delay: 0.25s;
-
-      .header__list-item {
-        transform: scale(1) translateY(0px);
+      .header__menu {
+        visibility: visible;
         opacity: 1;
-        pointer-events: unset;
-        user-select: unset;
+        pointer-events: all;
+        user-select: auto;
         transition:
-          transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
-          opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-        @for $i from 1 through 7 {
-          &:nth-child(#{$i}) {
-            transition-delay: #{0.07 * $i + 0.2}s;
-          }
-        }
-      }
-
-      .header__social-list-item {
-        transform: scale(1) translateY(0px);
-        opacity: 1;
+          visibility 0s,
+          opacity 0.35s;
       }
 
       .header__burger {
