--- a/src/blocks/lead/_lead.scss
+++ b/src/blocks/lead/_lead.scss
@@ -20,11 +20,17 @@
     flex-direction: column;
     justify-content: space-between;
     gap: var(--indent-md);
-    padding-block-start: clamp(3rem, 0.3592rem + 11.2676vw, 10.5rem); // 168
-    padding-block-end: clamp(4rem, 1.2711rem + 11.6432vw, 11.75rem); // 188
 
     @include media(md) {
       flex-direction: row;
+    }
+
+    @include media(lg) {
+      padding-block-end: clamp(4rem, 1.2711rem + 11.6432vw, 11.75rem); // 188
+    }
+
+    @include media(xl) {
+      padding-block-start: clamp(3rem, 0.3592rem + 11.2676vw, 10.5rem); // 168
     }
   }
 
@@ -36,7 +42,7 @@
   &__title {
     font-size: var(--display-md);
     font-weight: 700;
-    line-height: .95;
+    line-height: 0.95;
     margin-block-end: var(--indent-md);
   }
 
@@ -57,17 +63,17 @@
   &__controls {
     display: flex;
     flex-direction: column;
-    gap: var(--indent-sm);
+    gap: var(--indent-xs) var(--indent-sm);
 
-    @include media(md) {
+    @include media(xs) {
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
     }
   }
 
   &__images {
     position: relative;
-    flex: 1 1 min(250px, 100%);
+    flex: 1 1 min(400px, 100%);
     min-block-size: clamp(200px, 40vh, 400px);
 
     @include media(xl) {
