--- a/src/blocks/splide/_splide.scss
+++ b/src/blocks/splide/_splide.scss
@@ -3,15 +3,19 @@
 
   // &__list {}
 
-  // &__slide {}
+  &__slide {
+    &-mobile-width-md {
+      inline-size: min(70vw, 22em);
+    }
+  }
 
   &__pagination {
     position: static;
     padding-block: var(--indent-xs) 0;
 
     .splide__pagination__page {
-      block-size: .625em;
-      inline-size: .625em;
+      block-size: 0.625em;
+      inline-size: 0.625em;
       margin: 0 4px;
       border-radius: 24px;
       opacity: 1;
