--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -16,6 +16,7 @@ body {
   min-inline-size: 360px;
   margin: 0 auto;
   font-family: var(--main-font-family, 'Raleway', sans-serif);
+  font-feature-settings: 'lnum' 1;
   font-size: 16px;
   line-height: 1.5;
   color: var(--text-main-color);
