--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 // UI
 // @import '../blocks/icon/icon';
 // @import '../blocks/icon-button/icon-button';
+@import '../blocks/preloader/preloader';
 @import '../blocks/button/button';
 // @import '../blocks/field/field';
 
