--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,6 +15,7 @@
   --bg-accent-color-opacity: 47, 60, 51;
 
   --main-color: #f43f5e;
+  --main-color-darken: #E11D3A;
   --main-color-opacity: 244, 63, 94;
 
   --secondary-color: #84cc16;
