--- a/src/blocks/footer/_footer.scss
+++ b/src/blocks/footer/_footer.scss
@@ -142,6 +142,7 @@
     font-weight: 500;
     color: var(--text-secondary-color);
     text-decoration: none;
+    cursor: pointer;
     transition: color 0.3s;
 
     &:hover {
