--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -126,11 +126,6 @@
         grid-column: 1/3;
       }
 
-      .header__social-list {
-        grid-area: 2/3/3/4;
-        place-self: center;
-      }
-
       .header__login-button {
         grid-area: 1/3/2/4;
       }
@@ -159,6 +154,7 @@
     font-size: 1em;
     font-weight: 500;
     text-decoration: none;
+    cursor: pointer;
     transition: color 0.3s;
 
     @media (hover: hover) {
@@ -197,6 +193,18 @@
     display: flex;
     gap: var(--indent-xs);
     align-items: center;
+
+    @include media(xs, max) {
+      place-self: center;
+    }
+
+    @include media(md, max) {
+      place-self: start;
+    }
+
+    @include media(xl, max) {
+      grid-area: 2/3/3/4;
+    }
   }
 
   // &__social-list-item {}
