--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,3 +40,8 @@
 @import '../blocks/card/card';
 @import '../blocks/banner-card/banner-card';
 @import '../blocks/splide/splide';
+
+.skiptranslate {
+  display: none;
+  height: 0;
+}
