--- a/src/blocks/card/_card.scss
+++ b/src/blocks/card/_card.scss
@@ -54,7 +54,14 @@
     }
 
     &_border {
-      border-block-end: 1px solid var(--grey-200);
+      @include media(md, max) {
+        padding: var(--indent-card-sm);
+        border-radius: var(--border-radius-lg);
+        border: 1px solid var(--grey-200);
+      }
+      @include media(md) {
+        border-block-end: 1px solid var(--grey-200);
+      }
     }
   }
 
