--- a/src/blocks/statistics/_statistics.scss
+++ b/src/blocks/statistics/_statistics.scss
@@ -12,7 +12,7 @@
     grid-template-columns: repeat(auto-fit, minmax(min(7em, 100%), 1fr));
     gap: var(--indent-lg) var(--indent-xxl);
 
-    @include media(md) {
+    @include media(lg, max) {
       grid-template-columns: repeat(auto-fit, minmax(min(15em, 100%), 1fr));
     }
 
