--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,6 +27,7 @@
 @import '../blocks/statistics/statistics';
 @import '../blocks/how/how';
 @import '../blocks/hiw/hiw';
+@import '../blocks/features/features';
 @import '../blocks/why/why';
 @import '../blocks/step/step';
 @import '../blocks/theme/theme';
